@@ -1,3 +1,14 @@
+2000-08-31  TAKAHASHI Kaoru  <kaoru@kaisei.org>
+
+	* lisp/ptexinfmt.el (texinfo-multitable-widths,
+	texinfo-multitable-item): Apply char-width probrem fix patch
+	(by KOIE Hidetaka <koie@skipjack.koie.org>).
+	Newsgroups: fj.editor.emacs
+	Message-ID: <5dzom3nxq7.fsf@skipjack.koie.org>
+
+	* lisp/ptexinfmt.el (ptexinfmt-disable-broken-notice): New
+	variable.
+
 2000-08-29  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>
 
 	* lisp/nnshimbun.el (nnshimbun-zdnet-get-headers): Follow changes
